[project]
name = "vineflower-site"
version = "0"
license = "CC-BY-SA-4.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "sphinx (>=8.2.3,<9.0.0)",
    "sphinx-autobuild (>=2024.10.3,<2026.0.0)",
    "furo (>=2024.8.6,<2026.0.0)",
    "sphinx-design (>=0.6.1,<0.7.0)",
    "sphinx-github-changelog (>=1.4.0,<2.0.0)",
    "sphinx-substitution-extensions (>=2025.3.3,<2026.0.0)",
    "sphinx-copybutton (>=0.5.2,<0.6.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "myst-parser (>=4.0.1,<5.0.0)",
    "sphinxcontrib-spelling (>=8.0.1,<9.0.0)",
    "sphinx-reredirects (>=0.1.5,<0.2.0)",
    "sphinx-github-role @ git+https://github.com/astrojuanlu/sphinx-github-role.git@main"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
rstcheck = "^6.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
